ngx-mod/tests/compile_error/module_without_http_module.stderr
error[E0277]: the trait bound `M: ngx_mod::http::Module` is not satisfied
 --> tests/compile_error/module_without_http_module.rs
  |
  | #[derive(Module)]
  |          ^^^^^^ the trait `ngx_mod::http::Module` is not implemented for `M`
  |
  = note: required for `M` to implement `ngx_mod::http::UnsafeModule`
  = note: this error originates in the derive macro `Module` (in Nightly builds, run with -Z macro-backtrace for more info)
